<resources>
  <string name="app_name">FibonacciApp</string>
  <string name="posicionesHint">Posiciones...</string>
  <string name="fibonacciText">Fibonacci</string>
  <string name="factorialText">Factorial</string>
  <string name="paisesText">Paises</string>
  <string name="factorialDefaultText">1</string>
  <string name="tallerDefaultText">Taller 1</string>
  <string name="contadorFibonacciText">Contador Fibonacci:</string>
  <string name="fechaFibonacciText">Fecha Fibonacci:</string>
  <string name="contadorFactorialText">Contador Factorial:</string>
  <string name="fechaFactorialText">Fecha Factorial:</string>
  <string name="zeroText">0</string>
  <string name="minusText">-</string>
  <string name="title_activity_country_selector">CountrySelectorActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="capital">Capital:</string>
  <string name="nombre_pais">Nombre pais:</string>
  <string name="nombre_pais_int">Nombre pais int:</string>
  <string name="sigla">Sigla:</string>
</resources>