<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="5dp"
  android:orientation="vertical"
  tools:context=".CountryInfoActivity">

  <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/capital"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/capitalTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_toEndOf="@+id/textView1"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView1"
    android:text="@string/nombre_pais"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/nombrePaisTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView1"
    android:layout_marginStart="10dp"
    android:layout_toEndOf="@+id/textView2"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView2"
    android:text="@string/nombre_pais_int"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/nombrePaisIntTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView2"
    android:layout_marginStart="10dp"
    android:layout_toEndOf="@+id/textView3"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView3"
    android:text="@string/sigla"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/siglaTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView3"
    android:layout_marginStart="10dp"
    android:layout_toEndOf="@+id/textView4"
    android:textColor="@color/black" />

  <ImageView
    android:id="@+id/countryFlagImageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/siglaTextView"
    android:minWidth="40dp"
    android:minHeight="40dp"
    android:scaleType="fitXY"
    tools:ignore="ContentDescription" />
</RelativeLayout>